# govarnam-java

./: CMakeLists.txt  README.md  build_govarnam.sh
src/com/varnamproject/govarnam/: .gitignore  Suggestion.java  TransliterationResult.java  Varnam.java  jni.c
src/com/varnamproject/varnam/: Varnam.java  VarnamLibrary.java
